# threatmap

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  test_report.md  threatmap_rules.yaml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  index.html
examples/cloudformation/: stack.yaml
examples/kubernetes/: app.yaml
examples/terraform-aws/: main.tf
examples/terraform-azure/: main.tf
scripts/: export_screenshot.py
tests/: test_analyzers.py  test_improvements.py  test_parsers.py
tests/fixtures/: aws_insecure.tf  azure_insecure.tf  cfn_insecure.yaml  gcp_insecure.tf  k8s_insecure.yaml  s3_mfa_delete.tf
threatmap/: __main__.py  api.py  cli.py  detect.py  graphql.py
threatmap/analyzers/: aws.py  azure.py  engine.py  gcp.py  kubernetes.py  mitre.py  pasta.py
threatmap/models/: resource.py  threat.py
threatmap/parsers/: cloudformation.py  kubernetes.py  terraform.py
threatmap/reporters/: html_reporter.py  json_reporter.py  markdown.py  sarif_reporter.py
